# torque-poc

./: Anchor.toml  README.md  package-lock.json  package.json
lib/: derive-keypair.ts  ingest-event.ts  onnyx-advertise-client.ts  onnyx_advertise.json
programs/onnyx_advertise/: Cargo.toml
programs/onnyx_advertise/src/: lib.rs  mod.rs  onnyx_error.rs
programs/onnyx_advertise/src/instructions/: mod.rs
programs/onnyx_advertise/src/instructions/campaign_ixs/: crank.rs  create.rs  end.rs  mod.rs  update.rs
programs/onnyx_advertise/src/instructions/faucet_ixs/: add_new_tree.rs  init.rs  mod.rs
programs/onnyx_advertise/src/state/: campaign.rs  faucet.rs  mod.rs  user_conversion.rs
tests/: onnyx_advertise.ts
tests/test-keys/: advertiser.json  onnyx.json  publisher.json  user1.json  user2.json
